Fixed horizontal scroll issue

--- a/styles/common/base.css
+++ b/styles/common/base.css
@@ -28,12 +28,12 @@
 }
 html {
   scroll-behavior: smooth;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 body {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 h1,
 h2,
